feat: implement admin portal & fix bug (#27)
* chore: remove unused config

* fix: update configuration and improve API documentation

* chore: remove outdated test

* build: update gradle jvm args

* build: clean up

* feat: implement admin portal user management features

* support-service

* fix: update code handling to use Base64 encoded submissions

* refactor: streamline Piston API client and enhance test case execution handling

* fix: correct ADMIN_PORTAL_URL default value in production configuration

* chore: remove outdated docs

* fix

* fix sql

* fix

* fix: update HTTP methods for user profile and activation/deactivation endpoints

* add docs

* remove outdated docs

* update api docs

* run bun openapi-ts

---------

Co-authored-by: Lê Hoàng Chiến <162767439+HoangHazaLHC@users.noreply.github.com>