@@ -1,6 +1,5 @@
 plugins {
     id("spring-service.conventions")
-    id("kotlin-spring.conventions")
 }
 
 dependencies {
@@ -13,24 +12,4 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-validation")
     implementation("org.springframework.boot:spring-boot-starter-aop")
     implementation("org.springframework.retry:spring-retry")
-
-    testImplementation("org.jetbrains.kotlin:kotlin-stdlib")
-    testImplementation("org.jetbrains.kotlin:kotlin-reflect")
-    testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
-    testImplementation("org.springframework.boot:spring-boot-starter-test")
-    testImplementation("org.springframework.boot:spring-boot-starter-webflux")
-    testImplementation("com.fasterxml.jackson.module:jackson-module-kotlin") {
-        exclude(group = "org.jetbrains.kotlin")
-    }
-    testImplementation("org.springframework.boot:spring-boot-testcontainers")
-    testImplementation("org.testcontainers:junit-jupiter")
-    testImplementation("org.testcontainers:postgresql")
-    testImplementation("org.testcontainers:rabbitmq")
-    testImplementation("com.redis:testcontainers-redis")
-    testImplementation(libs.mockito.kotlin)
-}
-
-tasks.withType<Test> {
-    jvmArgs("-XX:+EnableDynamicAgentLoading")
-    useJUnitPlatform()
 }
